<resources>
    <string name="app_name">ID-a-Key</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">Email:</string>
    <string name="password">Password:</string>
    <string name="repeat_password">Repeat Password:</string>
    <string name="create">Create</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Log In</string>
    <string name="forget_password">Forgot Password</string>
    <string name="close">Close</string>
    <string name="iqe_app_key">4cb870a67b43493aa668e94ca9095b18</string>
    <string name="iqe_app_secret">c001b534b5f34f788653cf26c2ea9172</string>
</resources>