<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2e2e2e"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_top_view_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#71a5e5"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top_view_register"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:text="@string/e_mail"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect_white"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect_white"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/repeat_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_register_password_conf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect_white"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_reg_sign_up"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_rect_blue"
            android:text="@string/create"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="14dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/already_have_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_register_log_in"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/round_rect_blue"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>