<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_black"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_top_view_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#9dafc6"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/forget_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_forgot_close"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:padding="5dp"
            android:background="@drawable/round_rect_blue"
            android:text="@string/close"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top_view_register"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:text="@string/e_mail"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_forgot_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect_white"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_forgot_password_lay"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_rect_blue"
            android:text="@string/forget_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>